feat: 🎸 Cria Cadastro de Novo Local Exercício
