# src/routes/local.routes.js
@@ -1,0 +1,9 @@
+const { Router } = require('express');
+const LocalController = require('../controllers/LocalController');
+
+const localRoutes = new Router();
+
+// Rota para criar um novo local
+localRoutes.post('/', LocalController.criar);
+
+module.exports = localRoutes;
